--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ h1 {
   box-shadow: 0 0 20px 0 rgba(83, 14, 14, 0.8);
 }
 
-.green {
+.green1 {
   background: linear-gradient(#55680d, #71f53e, #116c31);
   box-shadow: 0 0 20px 0 #3b7e20cc;
 }
